public/stylesheets/main.css
/* ... */
#admin-nav li {
  display: block;
  float: left;
  margin: 0;
  padding: 0;
}

#admin-nav li a {
  padding: 40px 0 5px 0;
  width: 79px;
  text-align: center;
  margin-right: 5px;
  margin-botom:0;
  display: block;
  font-weight: bold;
  color: #333;
  font-size: 92%;
}

li#nrepo 	 a { background: url(../images/app/icons/repository.png) 50% 0 no-repeat;}
li#naccess   a { background: url(../images/app/icons/lock.png) 50% 0 no-repeat;}
li#nplugin   a { background: url(../images/app/icons/plugins.png) 50% 0 no-repeat;}
li#nsettings a { background: url(../images/app/icons/settings.png) 50% 0 no-repeat;}
li#nmembers  a { background: url(../images/app/icons/members.png) 50% 0 no-repeat;}

#admin-nav li a:hover {
  color: #555;
}

#admin-nav li.selected {
  background: url(../images/app/nav-selected.png) bottom left no-repeat;
  text-shadow: 2px 2px #eee;
}

#admin-nav li.selected a {
}

#second-nav {
  position: relative;
  list-style: none;
  margin-bottom: 10px;
  background: #ddd;
  padding: 5px;
  border-bottom: 1px solid #ccc;
  line-height: 160%;
}

#second-nav li {
  display: block;
  float: left;
}

#second-nav li a {
  display: block;
  padding: 0 5px;
  font-size: 92%;
  color: #555;
  font-weight: bold;
  text-align: center;
  text-shadow: 2px 2px #f7f7f7;
}

#second-nav li a:hover {
  color: #333;
}

li#jump {
  position: absolute;
  right: 5px;
  font-weight: bold;
  font-size: 92%;
}

li#jump select {
  font-size: 12px;
  padding: 0;
}

#repos, #permissions {
  list-style: none;
}

li.repo, li.permission {
  position: relative;
  background: #f7f7f7 url(../images/app/icons/repository.png) 3px 10px no-repeat;
  padding: 10px 45px;
}

li.permission {
  padding-left: 10px;
  background: #f7f7f7;
}

li.permission span.log {
  margin-left: 50px;
}

li .avatar {
  float: left;
  margin-right: 10px;
}

#repos span.log, #permissions span.log {
  font-size: 92%;
  font-weight: normal;
}

ul.admin-controls {
  list-style: none;
  position: absolute;
  right: 42px;
  top: 5px;
  height: 16px;
}

.edit, .del, .sync {
  position: absolute;
  left: 0;
  top: 0;
}

.del {
  left: 20px;
}

.sync {
  left: -20px;
}

.edit a, .del a, .sync a {
  display: block;
  width: 16px;
  height: 16px;
  text-indent: -9999px;
  background: url(../images/app/icons/edit.png) 0 50% no-repeat;
}

.del a {
  background: url(../images/app/icons/delete.png) 0 50% no-repeat;
}

.sync a {
  background: url(../images/app/icons/sync.png) 0 50% no-repeat;
}

#svn-paths {
  margin: 0;
  padding: 0;
}

#svn-paths p {
  margin-left: 10px;
  padding: 5px;
  position: relative;
  font-size: 92%;
}

input.path {
  width: 150px;
}

.sel {
  width: 150px;
}

/* My Comment */

.pagination {
  padding: 3px;
  margin: 10px auto;
}

.pagination a {
  padding: 2px 5px 2px 5px;
  margin: 2px;
  border: 1px solid #ccc;
  background: #f7f7f7;
  color: #555;
}

.pagination a:hover, .pagination a:active {
  border: 1px solid #aaa;
  color: #111;
}

.pagination span.current {
  padding: 2px 5px 2px 5px;
  margin: 2px;
  border: 1px solid #FFAB92;
  font-weight: bold;
  background-color: #FFE1D8;
  color: #d30;
}

.pagination span.disabled {
  padding: 2px 5px 2px 5px;
  margin: 2px;
  border: 1px solid #eee;
  color: #aaa;
}

.need-sync {
  background: #eee;
  padding: 2px 5px;
  font-weight: normal;
  color: #555;
  font-size: 92%;
}

.sync-percent {
  color: #333;
  text-shadow: 2px 2px #fff;
  font-weight: bold;
  float: right;
}

#commands {
  background: #f7f7f7;
  margin: 5px 0;
}

#commands p {
  padding: 10px;
}

.command {
  padding: 10px 0 10px 25px;
}

.command label {
  font-weight: bold;
  display: block;
}

.command input[type=text] {
  font-size: 150%;
}

.command span.help {
  font-size: 92%;
  font-weight: normal;
  color: #555;
  display: block;
}


/* @end */

/* @group Users */

#users {
  list-style: none;
}

/* @end */

/* @group Sheets */

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 99999;
  height: 100%;
  display: block;
  text-align: left;
}

.overlay-content {
  line-height: 100%;
  margin: 0 auto 0 auto;
  padding: 3px;
  padding: 0 0 0 0;
  background: url(../images/app/sheet-bottom.png) bottom left no-repeat;
  border-top: 0;
  width: 418px;
  color: #333;
}

.overlay-form {
  background: url(../images/app/sheet.png) bottom left repeat-y;
  padding: 0 7px 10px 6px;
}

/* My Comment */

.overlay-form h2 {
  margin-right: 8px;
  text-shadow: 2px 2px #fff;
  border-bottom: 1px solid #bbb;
  padding: 10px;
}

#profile-pic {
 float: right;
}

.oform {
  padding: 0 7px 20px 6px;
}

div.oform p label {
  display: block !important;
  font-weight: bold;
  margin-top:  10px;
  padding: 5px 0;
  text-shadow: 2px 2px #fff;
}

.oform p {
  padding: 0px 20px;
}

.oform textarea {
  width: 99%;
  border: 1px solid #ccc;
}

.oform form {
  padding: 20px;
}

.oform fieldset {
  border: none;
}

input.big {
  font-size: 150%;
  width: 95%;
}

p.btns {
  padding: 10px 25px 15px 20px;
  text-align: right;
}

.imgbtn, .cancelbtn {
  cursor: pointer;
  border: none;
}

input.submit {
  border: 0;
  padding: 1px 0 0 0;
  margin: 0px 0 0 10px;
}

button {
  margin: 0;
  padding: 0;
  border: 0;
  background: transparent;
  line-height: 100%;
}

/* @end */

/* @group Temp */
.sideblock {
  margin: 20px 0;
}

.sideblock h3 {
  background: #fff;
  padding: 5px;
  border: 1px solid #ddd;
  border-bottom: 1px solid #ccc;
  border-right: 1px solid #ccc;
}

.sideblock ul {
  list-style: none;
  padding: 5px;
  font-size: 92%;
}

#plugins li a {
  display: block;
  font-weight: bold;
  border-bottom: 1px solid #ccc;
  border-top: 1px solid #f7f7f7;
  padding: 5px 0 5px 25px;
  background-repeat: no-repeat;
  background-position: 0 50%;
}

#pictures li {
  list-style: none;
  display: block;
  float: left;
  margin-right: 30px;
  margin-bottom: 30px;
}


/* @end */

